# Rust-CLI-Manager

./: README.md
cli-main/: Cargo.toml
cli-main/src/: main.rs  password_manager.rs
