[package]
name = "cli-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"
default = true

[[bin]]
name = "auth"
path = "src/auth.rs"

[[bin]]
name = "backup"
path = "src/backup.rs"

[[bin]]
name = "pw_manager"
path = "src/password_manager.rs"

